[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/screens/UserProfile.gd" type="Script" id=1]
[ext_resource path="res://assets/user interface/backgrounds/Menu.png" type="Texture" id=2]
[ext_resource path="res://assets/user interface/themes/main_theme.tres" type="Theme" id=3]

[node name="UserProfile" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 6.0
margin_right = 1.0
margin_bottom = -6.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -58.0
margin_top = -28.0
margin_right = 1084.0
margin_bottom = 1890.0
theme = ExtResource( 3 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -11.0
margin_top = 7.0
margin_right = 14.0
margin_bottom = 2.0
custom_constants/separation = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="Container"]
margin_right = 1094.0
margin_bottom = 59.0
custom_constants/separation = 15

[node name="Class" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_left = 47.0
margin_right = 1047.0
margin_bottom = 24.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/VBoxContainer2/Class"]
margin_top = 5.0
margin_right = 450.0
margin_bottom = 19.0
rect_min_size = Vector2( 450, 0 )
text = "Tipo utente:"
align = 2

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer2/Class"]
margin_left = 475.0
margin_right = 1000.0
margin_bottom = 24.0
size_flags_horizontal = 11
caret_blink = true

[node name="ConfirmButton" type="Button" parent="Container/VBoxContainer2"]
margin_left = 510.0
margin_top = 39.0
margin_right = 583.0
margin_bottom = 59.0
size_flags_horizontal = 4
text = "CONFIRM"

[node name="Notification" type="Label" parent="Container"]
margin_top = 109.0
margin_right = 1094.0
margin_bottom = 123.0
size_flags_horizontal = 3
align = 1
autowrap = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="QuitButton" type="Button" parent="."]
margin_left = 78.0
margin_top = 1074.0
margin_right = 431.0
margin_bottom = 1440.0
rect_pivot_offset = Vector2( 177, 108 )
text = "QUIT"

[node name="BackButton" type="Button" parent="."]
margin_left = 596.0
margin_top = 1074.0
margin_right = 949.0
margin_bottom = 1440.0
rect_pivot_offset = Vector2( 177, 108 )
text = "indietro"

[connection signal="pressed" from="Container/VBoxContainer2/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
